2017-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Tested on ruby 2.4.0p0.
	* sample/util/setup_dll.rb: Add path for Ubuntu Linux.

2016-10-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-10-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-09-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-09-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/report_env.rb: Now shows GL_VENDOR, GL_RENDERER and GL_SHADING_LANGUAGE_VERSION.

2016-08-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfw32_build_dylib.sh: GLFW 3.2.1 build script for Mac OS X.

2016-08-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-07-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-06-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-06-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* opengl-bindings.gemspec: Fixed invalid license value (zlib/libpng -> Zlib). See http://spdx.org/licenses .
	* sample/glfw32_build_dylib.sh: GLFW 3.2 build script for Mac OS X.

2016-06-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-05-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-05-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.

2016-04-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/Gosu/lesson01.rb: Added.

2016-04-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-04-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* lib/glfw.rb: Now usable for GLFW 3.0, 3.1 and 3.2.
	* lib/glfw30.rb, lib/glfw31.rb, lib/glfw32.rb: Removed.
